# clipboard_to_file

./: Cargo.toml  README.md  config.json
src/: main.rs
