[package]
name = "clipboard_to_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard-win = { version = "5.3.0" }
reqwest = { version = "0.12.2", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
winapi = { version = "0.3.9", features = ["winbase"] }
